--- a/src/components/_PostDetailPage/PostDetailPage.css
+++ b/src/components/_PostDetailPage/PostDetailPage.css
@@ -1,4 +1,9 @@
 .profile-pic {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 200px;
+    max-height: 200px;
+}
+
+.btn-holder {
+    justify-content: flex-end;
+    display: flex;
 }
