--- a/src/components/_AddCommentForm/AddCommentForm.css
+++ b/src/components/_AddCommentForm/AddCommentForm.css
@@ -1,7 +1,7 @@
 .commentContainer {
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: lightblue;
+    background-color: #4E9BB9;
 }
 
 .textField {
