--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,7 +5,7 @@
   align-items: center;
 
   margin: 0 0 30px;
-  background-color: #4E9BB9;
+  background-color: #32527b;
   overflow: hidden;
 }
 
@@ -24,7 +24,7 @@
 .navLink {
   display: inline-block;
   color: white;
-  background-color: #4E9BB9;
+  background-color: #32527b;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
@@ -38,5 +38,5 @@
 }
 
 .navLink:hover {
-  background-color: #3d7890;
+  background-color: #1d324d;
 }
